# smsv2

./: .editorconfig  .gitignore  AGENTS.md  README.md  architecture.md  docker-compose.yaml  flake.nix  justfile  package-lock.json  package.json  setup_postgres.sh  vercel.json
apps/api/: .envrc  Cargo.toml  diesel.toml
apps/api/migrations/2026-03-30-142909-0000_create_students/: up.sql
apps/api/migrations/2026-04-12-211613-0000_create_users/: up.sql
apps/api/src/: auth.rs  config.rs  errors.rs  handlers.rs  main.rs  middleware.rs  routes.rs  state.rs
apps/api/src/auth/: errors.rs  jwt.rs
apps/api/src/domain/models/: student.rs  user.rs
apps/api/src/handlers/: login_handler.rs  student.rs  teacher_handler.rs
apps/api/src/handlers/student/: create_student.rs  delete_student.rs  get_student.rs  types.rs  update_student.rs
apps/api/src/handlers/student_handler/: create_student.rs  get_student.rs  update_student.rs
apps/api/src/handlers/teacher_handler/: create_teacher.rs  types.rs
apps/api/src/infra/: errors.rs  repositories.rs
apps/api/src/infra/db/: schema.rs
apps/api/src/infra/repositories/: student_repository.rs  users_repository.rs
apps/api/src/utils/custom_extractors/: json_extractor.rs
client/: index.html  package-lock.json  package.json
hurl/: delete_exams.hurl  get_exams.hurl  login.hurl  protected.hurl  update_exams.hurl  variables.env
nix/: devShell.nix  package.nix  services.nix
prisma/: schema.prisma  seed.js  seed.ts
server/: firebase.js  index.js  package-lock.json  package.json
src/: middleware.ts  proxy.ts
(+143 files in other folders)
