[package]
authors = ["Sargurunathan <psgnhealth@gmail.com>"]
description = "Student Management System API"
name = "smsv2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
diesel = { version = "2.3.7", features = ["postgres"] }
dotenvy = "0.15.7"
fastrace = "0.7.17"
tokio = { version = "1.50.0", features = ["full"] }
