[package]
authors = ["Sargurunathan <psgnhealth@gmail.com>"]
description = "Student Management System API"
name = "smsv2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
fastrace = "0.7.17"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
fastrace-tracing = { git = "https://github.com/fast/fastrace-tracing" }
fastrace-axum = "0.2.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
serde = "1.0.228"
serde_json = "1.0.149"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
uuid = { version = "1.23.0", features = ["fast-rng", "v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
axum-macros = "0.5.0"
bcrypt = "0.19.0"
